--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://i.pravatar.cc/150?img=12" alt="Foto Profil" class="profile-img">
+            <img src="profil.png" alt="Foto Profil" class="profile-img">
             <h1 class="name">KALVIN</h1>
             <p class="description">SANTRI</p>
         </div>
